--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MessMate Portal</title>
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; }
+    body { margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #fffbe6; }
     #login-page, #app { display: none; height: 100vh; }
     #login-page { display: flex; align-items: center; justify-content: center; }
-    .login-box { padding: 2rem; border: 1px solid #ccc; border-radius: 8px; }
-    #app { display: flex; }
-    #sidebar { width: 200px; background: #222; color: white; padding: 1rem; display: flex; flex-direction: column; }
-    #sidebar a { color: white; margin: 0.5rem 0; text-decoration: none; cursor: pointer; }
-    #main { flex: 1; padding: 1rem; overflow-y: auto; }
+    .login-box { padding: 2rem; border: 1px solid #ccc; border-radius: 8px; background: #fffff0; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    #app { display: flex; flex-direction: column; height: 100vh; }
+    #sidebar { width: 250px; background: #2e7d32; color: white; padding: 1rem; display: flex; flex-direction: column; position: fixed; top: 0; bottom: 0; left: 0; overflow-y: auto; }
+    #sidebar a { color: white; margin: 0.5rem 0; text-decoration: none; cursor: pointer; transition: 0.2s; }
+    #sidebar a:hover { background: #388e3c; padding: 0.2rem; border-radius: 4px; }
+    #main { margin-left: 250px; flex: 1; padding: 1rem; overflow-y: auto; }
     .page { display: none; }
     .active { display: block !important; }
-    .suggestion { border: 1px solid #ccc; padding: 0.5rem; margin-bottom: 0.5rem; }
-    .query, .complaint { border: 1px solid #ccc; padding: 0.5rem; margin-bottom: 0.5rem; }
-    .btn { cursor: pointer; padding: 0.3rem 0.5rem; margin-left: 0.5rem; }
+    .suggestion, .query, .complaint { border: 1px solid #ccc; padding: 0.75rem; margin-bottom: 0.75rem; background: #fdfdfd; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
+    .btn { cursor: pointer; padding: 0.4rem 0.6rem; margin-left: 0.5rem; background-color: #ffb74d; border: none; border-radius: 4px; color: white; }
+    .btn:hover { background-color: #ffa726; }
+    input[type="text"], input[type="password"] { width: 100%; padding: 0.5rem; margin: 0.5rem 0; border-radius: 4px; border: 1px solid #ccc; }
+    button[type="submit"] { background-color: #388e3c; color: white; border: none; padding: 0.5rem 1rem; border-radius: 4px; cursor: pointer; }
+    button[type="submit"]:hover { background-color: #2e7d32; }
+    @media screen and (max-width: 768px) {
+      #sidebar { position: static; width: 100%; flex-direction: row; overflow-x: auto; }
+      #main { margin-left: 0; padding-top: 1rem; }
+      #sidebar a { margin-right: 1rem; }
+      #app { flex-direction: column; }
+    }
   </style>
 </head>
 <body>
@@ -38,6 +48,7 @@
     <a data-page="dashboard">Dashboard</a>
     <a data-page="queries">Queries</a>
     <a data-page="suggestions">Suggestions</a>
+    <a data-page="complaints">Complaints</a>
     <a data-page="settings">Settings</a>
     <a data-page="profile">Profile</a>
     <a id="logout">Logout</a>
@@ -47,8 +58,6 @@
       <h2>Dashboard</h2>
       <h3>Daily Menu</h3>
       <ul id="menu-list"></ul>
-      <h3>Complaints</h3>
-      <div id="complaints"></div>
     </div>
     <div id="queries" class="page">
       <h2>Student Queries</h2>
@@ -65,6 +74,14 @@
         <button type="submit">Submit</button>
       </form>
       <div id="suggestions-list"></div>
+    </div>
+    <div id="complaints" class="page">
+      <h2>Complaints Center</h2>
+      <form id="complaint-form">
+        <input id="complaint-input" placeholder="Submit a complaint (e.g., cold food)" required />
+        <button type="submit">Submit</button>
+      </form>
+      <div id="complaints"></div>
     </div>
     <div id="settings" class="page"><h2>Settings (Coming Soon)</h2></div>
     <div id="profile" class="page"><h2>Profile (Coming Soon)</h2></div>
@@ -180,6 +197,14 @@
     const text = document.getElementById('suggestion-input').value;
     suggestionsData.push({ text, votes: 0 });
     document.getElementById('suggestion-input').value = '';
+    renderAll();
+  };
+
+  document.getElementById('complaint-form').onsubmit = e => {
+    e.preventDefault();
+    const text = document.getElementById('complaint-input').value;
+    complaintsData.push({ text, status: 'Pending' });
+    document.getElementById('complaint-input').value = '';
     renderAll();
   };
 </script>
