--- a/index.html
+++ b/index.html
@@ -5,28 +5,150 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MessMate Portal</title>
   <style>
-    body { margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #fffbe6; }
-    #login-page, #app { display: none; height: 100vh; }
-    #login-page { display: flex; align-items: center; justify-content: center; }
-    .login-box { padding: 2rem; border: 1px solid #ccc; border-radius: 8px; background: #fffff0; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    #app { display: flex; flex-direction: column; height: 100vh; }
-    #sidebar { width: 250px; background: #2e7d32; color: white; padding: 1rem; display: flex; flex-direction: column; position: fixed; top: 0; bottom: 0; left: 0; overflow-y: auto; }
-    #sidebar a { color: white; margin: 0.5rem 0; text-decoration: none; cursor: pointer; transition: 0.2s; }
-    #sidebar a:hover { background: #388e3c; padding: 0.2rem; border-radius: 4px; }
-    #main { margin-left: 250px; flex: 1; padding: 1rem; overflow-y: auto; }
-    .page { display: none; }
-    .active { display: block !important; }
-    .suggestion, .query, .complaint { border: 1px solid #ccc; padding: 0.75rem; margin-bottom: 0.75rem; background: #fdfdfd; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-    .btn { cursor: pointer; padding: 0.4rem 0.6rem; margin-left: 0.5rem; background-color: #ffb74d; border: none; border-radius: 4px; color: white; }
-    .btn:hover { background-color: #ffa726; }
-    input[type="text"], input[type="password"] { width: 100%; padding: 0.5rem; margin: 0.5rem 0; border-radius: 4px; border: 1px solid #ccc; }
-    button[type="submit"] { background-color: #388e3c; color: white; border: none; padding: 0.5rem 1rem; border-radius: 4px; cursor: pointer; }
-    button[type="submit"]:hover { background-color: #2e7d32; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #fffde7;
+    }
+    #login-page, #app {
+      display: none;
+      height: 100vh;
+    }
+    #login-page {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #fceabb, #f8b500);
+    }
+    .login-box {
+      padding: 2rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      background: #fff8e1;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    #app {
+      display: flex;
+      height: 100vh;
+    }
+    #sidebar {
+      width: 250px;
+      background: linear-gradient(160deg, #a5d6a7, #81c784);
+      color: white;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      overflow-y: auto;
+      transition: width 0.3s ease;
+    }
+    #sidebar.collapsed {
+      width: 60px;
+    }
+    #sidebar h3 {
+      font-size: 1.2rem;
+    }
+    #sidebar.collapsed h3,
+    #sidebar.collapsed a span {
+      display: none;
+    }
+    #sidebar a {
+      color: white;
+      margin: 0.5rem 0;
+      text-decoration: none;
+      cursor: pointer;
+      transition: 0.2s;
+      display: flex;
+      align-items: center;
+    }
+    #sidebar a:hover {
+      background: #66bb6a;
+      padding: 0.2rem;
+      border-radius: 4px;
+    }
+    #toggle-sidebar {
+      margin-bottom: 1rem;
+      cursor: pointer;
+      background-color: #ffcc80;
+      color: #5d4037;
+      padding: 0.5rem;
+      border: none;
+      border-radius: 5px;
+    }
+    #main {
+      margin-left: 250px;
+      flex: 1;
+      padding: 1rem;
+      overflow-y: auto;
+      transition: margin-left 0.3s ease;
+    }
+    #sidebar.collapsed + #main {
+      margin-left: 60px;
+    }
+    .page {
+      display: none;
+    }
+    .active {
+      display: block !important;
+    }
+    .suggestion, .query, .complaint {
+      border: 1px solid #ccc;
+      padding: 0.75rem;
+      margin-bottom: 0.75rem;
+      background: #fdfdfd;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    }
+    .btn {
+      cursor: pointer;
+      padding: 0.4rem 0.6rem;
+      margin-left: 0.5rem;
+      background-color: #ff8a65;
+      border: none;
+      border-radius: 4px;
+      color: white;
+    }
+    .btn:hover {
+      background-color: #ff7043;
+    }
+    input[type="text"], input[type="password"] {
+      width: 100%;
+      padding: 0.5rem;
+      margin: 0.5rem 0;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+    button[type="submit"] {
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button[type="submit"]:hover {
+      background-color: #43a047;
+    }
     @media screen and (max-width: 768px) {
-      #sidebar { position: static; width: 100%; flex-direction: row; overflow-x: auto; }
-      #main { margin-left: 0; padding-top: 1rem; }
-      #sidebar a { margin-right: 1rem; }
-      #app { flex-direction: column; }
+      #sidebar {
+        position: static;
+        width: 100%;
+        flex-direction: row;
+        overflow-x: auto;
+      }
+      #main {
+        margin-left: 0;
+        padding-top: 1rem;
+      }
+      #sidebar a {
+        margin-right: 1rem;
+      }
+      #app {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
@@ -44,14 +166,15 @@
 </div>
 <div id="app">
   <div id="sidebar">
+    <button id="toggle-sidebar">☰</button>
     <h3>MessMate</h3>
-    <a data-page="dashboard">Dashboard</a>
-    <a data-page="queries">Queries</a>
-    <a data-page="suggestions">Suggestions</a>
-    <a data-page="complaints">Complaints</a>
-    <a data-page="settings">Settings</a>
-    <a data-page="profile">Profile</a>
-    <a id="logout">Logout</a>
+    <a data-page="dashboard"><span>🏠</span><span> Dashboard</span></a>
+    <a data-page="queries"><span>❓</span><span> Queries</span></a>
+    <a data-page="suggestions"><span>📋</span><span> Suggestions</span></a>
+    <a data-page="complaints"><span>⚠️</span><span> Complaints</span></a>
+    <a data-page="settings"><span>⚙️</span><span> Settings</span></a>
+    <a data-page="profile"><span>👤</span><span> Profile</span></a>
+    <a id="logout"><span>🚪</span><span> Logout</span></a>
   </div>
   <div id="main">
     <div id="dashboard" class="page">
@@ -93,22 +216,25 @@
   const loginPage = document.getElementById('login-page');
   const app = document.getElementById('app');
   const loginError = document.getElementById('login-error');
+  const sidebar = document.getElementById('sidebar');
+  const toggleBtn = document.getElementById('toggle-sidebar');
+
+  toggleBtn.onclick = () => {
+    sidebar.classList.toggle('collapsed');
+  };
 
   const suggestionsData = [
     { text: 'Add pasta on Wednesdays', votes: 3 },
     { text: 'Include fruit juice in breakfast', votes: 5 }
   ];
-
   const queriesData = [
     { text: 'Why is dal so watery?', answer: 'We are addressing this', verified: true },
     { text: 'Can we have curd daily?', answer: null, verified: false }
   ];
-
   const complaintsData = [
     { text: 'Too much oil in dinner', status: 'Pending' },
     { text: 'Cold chapatis', status: 'Resolved' }
   ];
-
   const menuData = ['Poha, Tea', 'Dal, Rice, Sabzi', 'Chapati, Paneer'];
 
   loginForm.onsubmit = e => {
@@ -129,17 +255,14 @@
     document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
     document.getElementById(id).classList.add('active');
   }
-
   document.querySelectorAll('#sidebar a[data-page]').forEach(link => {
     link.onclick = () => showPage(link.getAttribute('data-page'));
   });
-
   document.getElementById('logout').onclick = () => {
     app.style.display = 'none';
     loginPage.style.display = 'flex';
     loginForm.reset();
   };
-
   function renderAll() {
     const menuList = document.getElementById('menu-list');
     menuList.innerHTML = '';
@@ -148,13 +271,11 @@
       li.textContent = item;
       menuList.appendChild(li);
     });
-
     const complaints = document.getElementById('complaints');
     complaints.innerHTML = '';
     complaintsData.forEach(c => {
       complaints.innerHTML += `<div class="complaint"><b>${c.text}</b> - ${c.status}</div>`;
     });
-
     const qlist = document.getElementById('queries-list');
     qlist.innerHTML = '';
     queriesData.forEach(q => {
@@ -164,7 +285,6 @@
         ${q.verified ? ' <span style="color: green;">[Verified]</span>' : ''}
       </div>`;
     });
-
     const slist = document.getElementById('suggestions-list');
     slist.innerHTML = '';
     suggestionsData.forEach((s, i) => {
@@ -178,12 +298,10 @@
       slist.appendChild(div);
     });
   }
-
   function vote(i, change) {
     suggestionsData[i].votes += change;
     document.getElementById(`vote-${i}`).textContent = suggestionsData[i].votes;
   }
-
   document.getElementById('query-form').onsubmit = e => {
     e.preventDefault();
     const text = document.getElementById('query-input').value;
@@ -191,7 +309,6 @@
     document.getElementById('query-input').value = '';
     renderAll();
   };
-
   document.getElementById('suggestion-form').onsubmit = e => {
     e.preventDefault();
     const text = document.getElementById('suggestion-input').value;
@@ -199,7 +316,6 @@
     document.getElementById('suggestion-input').value = '';
     renderAll();
   };
-
   document.getElementById('complaint-form').onsubmit = e => {
     e.preventDefault();
     const text = document.getElementById('complaint-input').value;
